[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pushshiftreader"
version = "0.2.0"
description = "Extract and analyze Reddit data from Pushshift archives"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["reddit", "pushshift", "data", "analysis", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "zstandard>=0.20.0",
]

[project.optional-dependencies]
progress = [
    "tqdm>=4.60.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "tqdm>=4.60.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pushshiftreader = "pushshiftreader.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pushshiftreader"
Documentation = "https://github.com/yourusername/pushshiftreader#readme"
Repository = "https://github.com/yourusername/pushshiftreader"
Issues = "https://github.com/yourusername/pushshiftreader/issues"

[tool.setuptools.packages.find]
include = ["pushshiftreader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
